# statc

./: .gitignore  Cargo.toml  Makefile  README.md  stats  test
.github/workflows/: ci.yml
core/: analyze.rs  display.rs  help.rs  inverse.rs  lib.rs  macros.rs  main.rs  math.rs  printer.rs  summary.rs  types.rs  utils.rs
core/data_set/: data.rs  mod.rs  point.rs
core/distributions/: binomial.rs  chi_squared.rs  exponential.rs  fisher_snedecor.rs  geometric.rs  mod.rs  negatve_binomial.rs  normal.rs  poisson.rs  students_t.rs  uniform.rs
interactive/: Cargo.toml
interactive/src/: main.rs
scripts/: bump-ver.sh
src/: data_set.rs  descriptions.rs  display.rs  distributions.rs  main.rs  math.rs  printer.rs  prob.rs  r.rs  secret.rs  types.rs  utils.rs
src/data_set/: data.rs  data_set.rs  mod.rs  point.rs
src/distributions/: binomial.rs  chi_squared.rs  exponential.rs  fisher_snedecor.rs  geometric.rs  info.rs  mod.rs  negative_binomial.rs  negatve_binomial.rs  normal.rs  poisson.rs  students_t.rs  types.rs  uniform.rs
tests/: discrete.rs  integration.rs  macros.rs  main.rs  reference.R  run  test.rs
